# Federated-RAG

./: README.md
fedrag/: '  README.md  ask_question.py  pyproject.toml  question.json  split_corpus.py  test_federated_setup.py  test_interactive.py  test_openai_integration.py
fedrag/fedrag/: client_app.py  corpus_splitter.py  llm_querier.py  reranker_model.py  retriever.py  server_app.py
