[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedrag"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "numpy>=1.26.0,<2",
    "faiss-cpu>=1.10.0",
    "tqdm>=4.67",
    "sentence_transformers>=3.4.1",
    "openai>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "dimitris"

[tool.flwr.app.components]
serverapp = "fedrag.server_app:app"
clientapp = "fedrag.client_app:app"

[tool.flwr.app.config]
# Possible question answer datasets: PubMedQA, BioASQ, MMLU, MedQA, MedMCQA
# you can pass them as follows: "pubmedqa|bioasq|mmlu|medqa|medmcqa"
# the vertical bar separates the different benchmark datasets
server-qa-datasets = "pubmedqa|bioasq"
# Force to only evaluate the first 10 questions from each benchmark
# dataset, if this value is not set, then evaluate all questions
server-qa-num = 10
# Pass corpus as "StatPearls|Textbooks", the corpus will be assigned
# to each client participating in the federation in a Round-Robin fashion
# The supported corpora are:
# PubMed (23.9M docs), StatPearls (9.3k docs), Textbooks (18 docs), Wikipedia (6.5M docs)
# you can pass them as follows: "pubmed|statpearls|textbooks|wikipedia"
# For split textbooks: "textbooks_part1|textbooks_part2|textbooks_part3|textbooks_part4|textbooks_part5"
# the vertical bar separates the different corpus
clients-corpus-names = "textbooks_part1|textbooks_part2|textbooks_part3|textbooks_part4|textbooks_part5"
# The value of the Reciprocal Rank Fusion. The value will be used
# to merge multiple documents together at the server-side
# If the value is not set then only the retrieval scores are considered
k-rrf = 60
# The k-nearest-neighbor (most relevant) documents to the given search query
# used by clients to retrieve top-k relevant documents and at the server
# to select the final top-k documents after the merge operation
k-nn = 
# The OpenAI model used by the server to execute the RAG query.
# Available models: "gpt-4", "gpt-4-turbo", "gpt-3.5-turbo", etc.
# Make sure you have set your OPENAI_API_KEY environment variable.
server-llm-model = "gpt-4.1"
# GPU setting is ignored for OpenAI API but kept for compatibility
server-llm-use-gpu = "false"
# User question for the federated RAG system
user-question = "What are the symptoms of hypertension?"


[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
options.backend.client-resources.num-cpus = 4
options.backend.client-resources.num-gpus = 0
